# Denoising-rk3588J

./: .gitignore  README.md
cpp_develop/model/: CMakeLists.txt  denoising.cpp
cpp_develop/model/singleInfer/: CMakeLists.txt  build_and_run.sh  single_infer.cpp
demo/: RK3588J去噪demo运行说明.docx  RK3588环境配置与去噪程序说明.docx  dncnn_80ep_l9_4split_16pad.hef  inference_camera.py  inference_camera2mp4.py  inference_camera_cat.py  inference_mp4.py
demo_old/: inference_camera2mp4.py
docs/: 1. 环境配置.md  2. 去噪程序.md  3. python转c++.md  RK3588J去噪demo运行说明.docx
models/dncnn_4split/: inference.py  inference_mp4.py  inference_mp4_.py  inference_stream.py  inference_stream2.py  inference_stream3.py  inference_stream_outputvideo.py  run.sh
models/dncnn_identical/: inference_stream_outputvideo.py
models/dncnn_official/: inference.py
models/dncnn_v0/: inference.py  inference_stream.py  inference_stream_outputvideo.py
models/pmrid/: inference.py
models/pmrid_v1/: inference.py
tools/bluetooth/: command.md
tools/camera/: camera_capture.py  camera_tester.py  command.md
tools/hailortcli/: command.txt
tools/qtshow/: command.md  qtshow_test.py
tools/video/: long2short.py
